--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,8 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
     <div class="footer-col-wrapper">
+
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
@@ -22,11 +20,19 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        {%- include social.html -%}
+        <p>
+          Organisationsnummer:<br/>
+          769631-8786
+        </p>
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
+        <p>
+          c/o FF FASTIGHETSERVICE<br/>
+           BOX 5018<br/>
+           600 05 Norrköping<br/>
+        </p>
+      </div>
       </div>
     </div>
 
