--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 
       <div class="footer-col footer-col-2">
         <p>
-          Organisationsnummer:<br/>
+          Org.nr:<br/>
           769631-8786
         </p>
       </div>
