--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,9 +28,10 @@
 
       <div class="footer-col footer-col-3">
         <p>
+          BRF Slånbäret<br/>
           c/o FF FASTIGHETSERVICE<br/>
-           BOX 5018<br/>
-           600 05 Norrköping<br/>
+          BOX 5018<br/>
+          600 05 Norrköping<br/>
         </p>
       </div>
       </div>
