--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="wrapper">
     <div class="footer-col-wrapper">
 
-      <div class="footer-col footer-col-1">
+      <div class="footer-col">
         <ul class="contact-list">
           <li class="p-name">
             {%- if site.author -%}
@@ -19,14 +19,14 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="footer-col">
         <p>
           Org.nr:<br/>
           769631-8786
         </p>
       </div>
 
-      <div class="footer-col footer-col-3">
+      <div class="footer-col">
         <p>
           BRF Slånbäret<br/>
           c/o FF FASTIGHETSERVICE<br/>
