--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,11 @@ layout: default
 ---
 
 <div class="home">
+  {% for event in site.kalender %}
+    <h2><a href={{ event.url }}>{{ event.title }}</a></h2>
+    <p>{{ event.content | markdownify }}</p>
+  {% endfor %}
+
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
