--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,9 +29,9 @@
       <div class="footer-col">
         <p>
           BRF Slånbäret<br/>
-          c/o FF FASTIGHETSERVICE<br/>
-          BOX 5018<br/>
-          600 05 Norrköping<br/>
+          c/o Infinite Ekonomi<br/>
+          Gullrisgatan 128<br/>
+          692 71 Kumla<br/>
         </p>
       </div>
       </div>
